# tensorrt-cpp-server

./: CMakeLists.txt  README.md
.github/workflows/: codeql.yml
src/: buffers.h  mnist.cpp  mnist.h  model.h  server.cpp
